--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1505,22 +1505,22 @@ body {
 .cid-ru9178DhMV .mbr-text {
   color: #767676;
 }
-.cid-ru966d0cMD {
+.cid-rua7lq3u6D {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #ffffff;
 }
 @media (min-width: 992px) {
-  .cid-ru966d0cMD .mbr-figure {
-    padding-left: 4rem;
+  .cid-rua7lq3u6D .mbr-figure {
+    padding-right: 4rem;
   }
 }
-@media (max-width: 992px) {
-  .cid-ru966d0cMD .mbr-figure {
-    padding-top: 1rem;
+@media (max-width: 991px) {
+  .cid-rua7lq3u6D .mbr-figure {
+    padding-bottom: 1rem;
   }
 }
-.cid-ru966d0cMD .mbr-text {
+.cid-rua7lq3u6D .mbr-text {
   color: #767676;
 }
 .cid-ru967mZ0w8 {
