--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1943,3 +1943,6 @@ body {
 .cid-ru90UrUWPi foot-menu-item B {
   color: #55b4d4;
 }
+.cid-ru90UrUWPi .media-container-row .mbr-text {
+  color: #55b4d4;
+}
