added prof activities

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1862,6 +1862,33 @@ body {
   border-radius: 50%;
   border-radius: 0;
 }
+.cid-rD5i0cm295 {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background-color: #232323;
+}
+.cid-rD5i0cm295 P {
+  color: #767676;
+}
+.cid-rD5i0cm295 H1 {
+  color: #ffffff;
+}
+.cid-rD5i0cm295 .mbr-text,
+.cid-rD5i0cm295 .mbr-section-btn {
+  color: #55b4d4;
+}
+.cid-rD5kbxSKDw {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rD5kbxSKDw .mbr-text,
+.cid-rD5kbxSKDw blockquote {
+  color: #767676;
+}
+.cid-rD5kbxSKDw .mbr-text P {
+  text-align: center;
+}
 .cid-ru90UrUWPi {
   padding-top: 30px;
   padding-bottom: 30px;
