--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -811,6 +811,7 @@ section.lazy-placeholder:after {
 }
 .cid-ru9178DhMV .mbr-text {
   color: #767676;
+  text-align: left;
 }
 .cid-ru9bWIO6r2 {
   padding-top: 45px;
