--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,9 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,600,700,800,900,300i,400i,500i,600i,700i,800i,900i&display=swap);
-
-
-
-
-
 body {
   font-family: Rubik;
 }
@@ -707,6 +701,18 @@ section.lazy-placeholder:after {
   .cid-ru8qioP3P4 .mbr-text {
     text-align: center;
   }
+}
+.cid-sR6MVWDuIj {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background: linear-gradient(0deg, #7fdbfd, #6670a9);
+}
+.cid-sR6MVWDuIj .mbr-iconfont-social {
+  font-size: 32px;
+  color: #ff3366;
+}
+.cid-sR6MVWDuIj .social-list a:focus {
+  text-decoration: none;
 }
 .cid-sof6QfY6md {
   padding-top: 0rem;
