--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -27,11 +27,11 @@ body {
 }
 .display-5 {
   font-family: 'Rubik', sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-display: swap;
 }
 .display-5 > .mbr-iconfont {
-  font-size: 2.4rem;
+  font-size: 2.08rem;
 }
 .display-7 {
   font-family: 'Rubik', sans-serif;
@@ -63,9 +63,9 @@ body {
     line-height: calc( 1.4 * (1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
-    font-size: 1.2rem;
-    font-size: calc( 1.175rem + (1.5 - 1.175) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.175rem + (1.5 - 1.175) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.04rem;
+    font-size: calc( 1.105rem + (1.3 - 1.105) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.105rem + (1.3 - 1.105) * ((100vw - 20rem) / (48 - 20))));
   }
 }
 /* Buttons */
@@ -1489,34 +1489,29 @@ section.lazy-placeholder:after {
     display: block;
   }
 }
-.cid-ru9Uo1LKFz {
-  padding-top: 0px;
-  padding-bottom: 15px;
+.cid-tisyrSvjjh {
+  padding-top: 0rem;
+  padding-bottom: 2rem;
   background-color: #ffffff;
 }
-.cid-ru9Uo1LKFz .counter-container {
-  color: #767676;
-}
-.cid-ru9Uo1LKFz .counter-container ol {
+.cid-tisyrSvjjh .counter-container ol {
   margin-bottom: 0;
   counter-reset: myCounter;
 }
-.cid-ru9Uo1LKFz .counter-container ol li {
+.cid-tisyrSvjjh .counter-container ol li {
   margin-bottom: 1rem;
 }
-.cid-ru9Uo1LKFz .counter-container ol li {
+.cid-tisyrSvjjh .counter-container ol li {
   list-style: none;
-  padding-left: .5rem;
+  padding-left: 1rem;
+  position: relative;
 }
-.cid-ru9Uo1LKFz .counter-container ol li:before {
+.cid-tisyrSvjjh .counter-container ol li:before {
   position: absolute;
-  left: 0px;
-  margin-top: -10px;
+  left: -40px;
+  margin-top: 5px;
   counter-increment: myCounter;
   content: counter(myCounter);
-  display: inline-block;
-  text-align: center;
-  margin: 5px 10px;
   line-height: 40px;
   transition: all .2s;
   color: #ffffff;
@@ -1524,7 +1519,9 @@ section.lazy-placeholder:after {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  border-radius: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .cid-rD5i0cm295 {
   padding-top: 30px;
@@ -1570,6 +1567,8 @@ section.lazy-placeholder:after {
   height: 40px;
   border-radius: 50%;
   margin-top: 5px;
+  border-radius: 0;
+  content: "✓";
 }
 .cid-sw3x7mRlVC {
   padding-top: 30px;
@@ -1615,6 +1614,7 @@ section.lazy-placeholder:after {
   height: 40px;
   border-radius: 50%;
   margin-top: 5px;
+  content: "✓";
 }
 .cid-tisoQ64gk2 .mbr-text UL {
   text-align: left;
