--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1039,7 +1039,7 @@ section.lazy-placeholder:after {
   }
 }
 .cid-ru8qioP3P4 {
-  background-image: url("../../../assets/images/mbr-1920x1117.jpg");
+  background-image: url("../../../assets/images/mbr-1-1920x1117.jpg");
 }
 @media (min-width: 992px) {
   .cid-ru8qioP3P4 .mbr-figure {
@@ -1058,6 +1058,40 @@ section.lazy-placeholder:after {
 }
 .cid-ru8qioP3P4 .mbr-text,
 .cid-ru8qioP3P4 .mbr-section-btn {
+  text-align: center;
+}
+.cid-tiKZM7ZnEb {
+  padding-top: 2rem;
+  padding-bottom: 0rem;
+  background-image: url("../../../assets/images/mbr-1920x1081.jpg");
+}
+.cid-tiKZM7ZnEb .mbr-overlay {
+  background-color: #ffffff;
+  opacity: 0.4;
+}
+.cid-tiKZM7ZnEb form.mbr-form {
+  border-radius: 10px;
+  background-color: #fafafa;
+}
+@media (min-width: 992px) {
+  .cid-tiKZM7ZnEb form.mbr-form {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tiKZM7ZnEb form.mbr-form {
+    padding: 1rem;
+  }
+}
+.cid-tiKZM7ZnEb form.mbr-form .mbr-section-btn {
+  text-align: center;
+  margin-bottom: 1.2rem;
+}
+.cid-tiKZM7ZnEb form.mbr-form .mbr-section-btn .btn {
+  width: 100%;
+  height: 100%;
+}
+.cid-tiKZM7ZnEb P {
   text-align: center;
 }
 .cid-sof1B5jrDS {
