--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1060,6 +1060,9 @@ section.lazy-placeholder:after {
 .cid-ru8qioP3P4 .mbr-section-btn {
   text-align: center;
 }
+.cid-ru8qioP3P4 H1 {
+  text-align: center;
+}
 .cid-tiKZM7ZnEb {
   padding-top: 2rem;
   padding-bottom: 0rem;
