--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -967,7 +967,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #000000;
 }
 .cid-tisb1fmc73 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1741,7 +1741,7 @@ section.lazy-placeholder:after {
   color: #55b4d4;
 }
 .cid-tirPrRPJKt {
-  padding-top: 30px;
+  padding-top: 45px;
   padding-bottom: 15px;
   background-color: #232323;
 }
