--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1063,39 +1063,27 @@ section.lazy-placeholder:after {
 .cid-ru8qioP3P4 H1 {
   text-align: center;
 }
-.cid-tiKZM7ZnEb {
-  padding-top: 2rem;
-  padding-bottom: 0rem;
+.cid-tkvWYFKi4e {
   background-image: url("../../../assets/images/mbr-1920x1081.jpg");
 }
-.cid-tiKZM7ZnEb .mbr-overlay {
-  background-color: #ffffff;
-  opacity: 0.4;
+.cid-tkvWYFKi4e .card-wrapper {
+  background: #ffffff;
+  border-radius: 4px;
 }
-.cid-tiKZM7ZnEb form.mbr-form {
-  border-radius: 10px;
-  background-color: #fafafa;
-}
-@media (min-width: 992px) {
-  .cid-tiKZM7ZnEb form.mbr-form {
-    padding: 2rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-tiKZM7ZnEb form.mbr-form {
+@media (max-width: 767px) {
+  .cid-tkvWYFKi4e .card-wrapper {
     padding: 1rem;
   }
 }
-.cid-tiKZM7ZnEb form.mbr-form .mbr-section-btn {
-  text-align: center;
-  margin-bottom: 1.2rem;
+@media (min-width: 768px) and (max-width: 991px) {
+  .cid-tkvWYFKi4e .card-wrapper {
+    padding: 2rem;
+  }
 }
-.cid-tiKZM7ZnEb form.mbr-form .mbr-section-btn .btn {
-  width: 100%;
-  height: 100%;
-}
-.cid-tiKZM7ZnEb P {
-  text-align: center;
+@media (min-width: 992px) {
+  .cid-tkvWYFKi4e .card-wrapper {
+    padding: 4rem;
+  }
 }
 .cid-sof1B5jrDS {
   padding-top: 2rem;
