--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1063,6 +1063,22 @@ section.lazy-placeholder:after {
 .cid-ru8qioP3P4 H1 {
   text-align: center;
 }
+.cid-tPCQYgQNYy {
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+  background-color: #ffffff;
+}
+@media (max-width: 991px) {
+  .cid-tPCQYgQNYy .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-tPCQYgQNYy .row {
+  flex-direction: row-reverse;
+}
+.cid-tPCQYgQNYy img {
+  width: 100%;
+}
 .cid-tkvWYFKi4e {
   background-image: url("../../../assets/images/mbr-1920x1081.jpg");
 }
