--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1059,6 +1059,7 @@ section.lazy-placeholder:after {
 .cid-ru8qioP3P4 .mbr-text,
 .cid-ru8qioP3P4 .mbr-section-btn {
   text-align: center;
+  color: #ffffff;
 }
 .cid-ru8qioP3P4 H1 {
   text-align: center;
