--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1363,6 +1363,9 @@ section.lazy-placeholder:after {
 .cid-tvlNOTMjnV H3 {
   text-align: center;
 }
+.cid-tvlNOTMjnV P {
+  text-align: left;
+}
 .cid-tirYieuzb8 {
   padding-top: 3rem;
   padding-bottom: 3rem;
